[gd_scene load_steps=4 format=3 uid="uid://cijhe4utbfb46"]

[ext_resource type="FontFile" uid="uid://dc0l4u2m5v43n" path="res://joystix monospace.otf" id="1_77msd"]
[ext_resource type="Script" path="res://end_scene.gd" id="1_iepdo"]
[ext_resource type="Script" path="res://LootLockerGodot.gd" id="3_voi56"]

[node name="EndScene" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iepdo")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -303.0
offset_right = 161.5
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_77msd")
theme_override_font_sizes/font_size = 21
text = "Your final score is"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = 23.0
offset_right = 255.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_77msd")
theme_override_font_sizes/font_size = 16
text = "Press any button to play again"
horizontal_alignment = 1

[node name="HighScoreText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -200.0
offset_right = 322.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_77msd")
theme_override_font_sizes/font_size = 16
text = "       HIGH SCORES"

[node name="Scores" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -160.0
offset_right = 318.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_77msd")
theme_override_font_sizes/font_size = 16
text = "LOADING LEADERBOARD..."

[node name="LootLocker" type="Node2D" parent="."]
script = ExtResource("3_voi56")

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 433.0
offset_right = 260.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_77msd")
placeholder_text = "Your Name"
max_length = 12

[node name="Submit" type="Button" parent="."]
layout_mode = 0
offset_left = 286.0
offset_top = 434.0
offset_right = 461.0
offset_bottom = 466.0
theme_override_fonts/font = ExtResource("1_77msd")
text = "Submit"

[connection signal="leaderboard_collected" from="LootLocker" to="." method="_on_loot_locker_leaderboard_collected"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Submit" to="." method="_on_button_pressed"]
